--- a/src/components/compnents.css
+++ b/src/components/compnents.css
@@ -1,30 +1,32 @@
 .section {
   display: flex;
+
   justify-content: space-between;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   gap: 2rem;
 }
 
 .edit-education {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 2rem;
 }
-.add-new-button {
+.button {
   width: 10rem;
   height: 3rem;
   align-self: center;
 }
 .edit-personal {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 2rem;
 }
 
 .buttons {
   display: flex;
-  gap: 1rem;
+  align-self: center;
+  gap: 2rem;
 }
 
 .job {
@@ -34,15 +36,20 @@
   align-items: flex-start;
 }
 
-.edit-experience-div {
-  display: flex;
-  flex-direction: column;
-
-  gap: 2rem;
-}
-
-.job-form {
+.form {
   display: flex;
   align-items: center;
   gap: 2rem;
+}
+
+.edit-education-div,
+.preview,
+.edit-experience-div,
+.preview-section {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-self: flex-start;
+  justify-content: space-between;
+  margin-bottom: 1rem;
 }
